[main-private] code improvements